--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="education-item">
                     <h3>Bachelor of Science in Information Technology</h3>
-                    <p>Lala Lajpat Rai College of Commerce and Economics, University of Mumbai</p>
+                    <p>University of Mumbai</p>
                     <p class="date">June 2019 - April 2022</p>
                 </div>
             </div>
