--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="hero">
         <div class="hero-content">
             <h1>Aakash Suryavanshi</h1>
-            <p>Cloud and Data Enthusiast | Azure & AWS Certified | Full-Stack Developer</p>
+            <p>Cloud and Data Enthusiast | Azure & AWS | DevOps and MLOps</p>
             <div class="social-links">
                 <a href="http://www.linkedin.com/in/aakash-suryavanshi" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
