--- a/index.html
+++ b/index.html
@@ -67,6 +67,37 @@
             </div>
         </div>
     </section>
+     <section class="volunteering">
+        <div class="container">
+            <h2>Volunteering</h2>
+            <div class="volunteering-grid">
+                 <div class="volunteering-item">
+                    <h3>IT Support</h3>
+                    <p class="organization">Tech Connect Alberta - Calgary, AB</p>
+                    <p class="date">Nov 2024 - Present</p>
+                    <ul class="achievements">
+                        <li>Managed verification process for Discord server with over 3,000 users by implementing ticketing system and automated bots</li>
+                        <li>Closed an average of 30 tickets per week while addressing user inquiries and troubleshooting access issues</li>
+                        <li>Developed and implemented Discord bots using Python for user verification and role assignment</li>
+                        <li>Demonstrated strong communication and customer service skills in maintaining community environment</li>
+                    </ul>
+                </div>
+                <div class="volunteering-item">
+                    <h3>IT Support Volunteer</h3>
+                    <p class="organization">National Service Scheme, Lala Lajpatrai College - Mumbai, MAHA</p>
+                    <p class="date">July 2019 - July 2021</p>
+                    <ul class="achievements">
+                        <li>Provided IT support for college events, troubleshooting hardware, software, and event setup issues</li>
+                        <li>Configured live streaming on YouTube using Zoom during COVID, ensuring seamless virtual access for over 300 attendees across 40+ events</li>
+                        <li>Documented tasks, event details, and technical processes for future reference and team coordination</li>
+                        <li>Created and managed PowerPoint presentations for event briefings and activities</li>
+                        <li>Designed posters and visual materials to promote events within the college community</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <section class="education">
         <div class="container">
