--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="volunteering-item">
                     <h3>IT Support Volunteer</h3>
-                    <p class="organization">National Service Scheme, Lala Lajpatrai College - Mumbai, MAHA</p>
+                    <p class="organization">National Service Scheme, Mumbai University - Mumbai, MAHA</p>
                     <p class="date">July 2019 - July 2021</p>
                     <ul class="achievements">
                         <li>Provided IT support for college events, troubleshooting hardware, software, and event setup issues</li>
