--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
                     </ul>
                 </div>
                 <div class="volunteering-item">
+                    <h3>Volunteer Support</h3>
+                    <p class="organization">YYC Datacon - Calgary, AB</p>
+                    <p class="date">March 2024</p>
+                    <ul class="achievements">
+                        <li>Presented an AI-driven document analysis project at YYC DataCon – Future Summit 2025, demonstrating real-world application of computer vision and OCR for automated information extraction.</li>
+                        <li>Engaged with industry professionals and AI researchers to gather feedback and insights, enhancing both the technical and strategic direction of our project.</li>
+                        <li>Selected as a poster presenter at SAIT’s capstone showcase, contributing to a broader dialogue on the role of AI in solving operational and data challenges across sectors.</li>
+                        <li>Recognized by faculty and mentors for excellence in teamwork, innovation, and professional presentation.</li>
+                    </ul>
+                </div>
+                <div class="volunteering-item">
                     <h3>IT Support Volunteer</h3>
                     <p class="organization">National Service Scheme, Mumbai University - Mumbai, MAHA</p>
                     <p class="date">July 2019 - July 2021</p>
