--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                         <li>Recognized by faculty and mentors for excellence in teamwork, innovation, and professional presentation.</li>
                     </ul>
                 </div>
+                 <div class="volunteering-item">
+                    <h3>Volunteer Support</h3>
+                    <p class="organization">Google DevFestYYC - Calgary, AB</p>
+                    <p class="date">March 2024</p>
+                    <ul class="achievements">
+                        <li>Actively contributed to event logistics, attendee experience, and session facilitation, ensuring a smooth and enriching experience for all participants.</li>
+                        <li>Engaged with a vibrant network of developers, engineers, and tech leaders, fostering meaningful professional relationships and learning from diverse industry perspectives.</li>
+                        <li>Gained exposure to cutting-edge trends in software development, cloud technology, and AI through keynotes, workshops, and networking sessions.</li>
+                    </ul>
+                </div>
                 <div class="volunteering-item">
                     <h3>IT Support Volunteer</h3>
                     <p class="organization">National Service Scheme, Mumbai University - Mumbai, MAHA</p>
